prevent navbar username wrap

--- a/assembl/static2/css/components/navbar.scss
+++ b/assembl/static2/css/components/navbar.scss
@@ -92,6 +92,7 @@
     margin-top: 0;
 
     .username {
+      white-space: nowrap;
       margin-left: 10px;
       line-height: normal;
       padding-right: 0;
